[gd_scene load_steps=57 format=2]

[ext_resource path="res://sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://sprites/Light.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Entities/player_canvas.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Components/Pivot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Components/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Entities/Components/Stats/player_stats.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Entities/player.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Components/HurtBox.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.65727
height = 2.78581

[sub_resource type="Animation" id=2]
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "state_anim_finished"
} ]
}

[sub_resource type="Animation" id=3]
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "state_anim_finished"
} ]
}

[sub_resource type="Animation" id=4]
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "state_anim_finished"
} ]
}

[sub_resource type="Animation" id=5]
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "state_anim_finished"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58, 59 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "state_anim_finished"
} ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "state_anim_finished"
} ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "state_anim_finished"
} ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "state_anim_finished"
} ]
}

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 18 ]
}

[sub_resource type="Animation" id=15]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 12 ]
}

[sub_resource type="Animation" id=16]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=17]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "CastDown"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "CastUp"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "CastLeft"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "CastRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeTimeScale" id=23]

[sub_resource type="AnimationNodeBlendTree" id=24]
nodes/BlendSpace2D/node = SubResource( 22 )
nodes/BlendSpace2D/position = Vector2( 140, 80 )
nodes/TimeScale/node = SubResource( 23 )
nodes/TimeScale/position = Vector2( 400, 40 )
nodes/output/position = Vector2( 640, 60 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "BlendSpace2D" ]

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=34]
blend_point_0/node = SubResource( 30 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 31 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 32 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 33 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "RunUp"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=39]
blend_point_0/node = SubResource( 35 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 36 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 37 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 38 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachine" id=46]
states/Cast/node = SubResource( 24 )
states/Cast/position = Vector2( 92.701, 172 )
states/Idle/node = SubResource( 29 )
states/Idle/position = Vector2( 279, 109 )
states/Roll/node = SubResource( 34 )
states/Roll/position = Vector2( 355.701, 34 )
states/Run/node = SubResource( 39 )
states/Run/position = Vector2( 443, 124 )
transitions = [ "Idle", "Run", SubResource( 40 ), "Run", "Idle", SubResource( 41 ), "Cast", "Idle", SubResource( 42 ), "Idle", "Cast", SubResource( 43 ), "Roll", "Idle", SubResource( 44 ), "Idle", "Roll", SubResource( 45 ) ]
start_node = "Idle"
graph_offset = Vector2( -196.299, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=47]

[sub_resource type="CapsuleShape2D" id=48]
radius = 5.875
height = 6.5

[node name="Player" type="KinematicBody2D"]
collision_mask = 26
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 60
frame = 18
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CastDown = SubResource( 2 )
anims/CastLeft = SubResource( 3 )
anims/CastRight = SubResource( 4 )
anims/CastUp = SubResource( 5 )
anims/IdleDown = SubResource( 6 )
anims/IdleLeft = SubResource( 7 )
anims/IdleRight = SubResource( 8 )
anims/IdleUp = SubResource( 9 )
anims/RollDown = SubResource( 10 )
anims/RollLeft = SubResource( 11 )
anims/RollRight = SubResource( 12 )
anims/RollUp = SubResource( 13 )
anims/RunDown = SubResource( 14 )
anims/RunLeft = SubResource( 15 )
anims/RunRight = SubResource( 16 )
anims/RunUp = SubResource( 17 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 46 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 47 )
parameters/Cast/BlendSpace2D/blend_position = Vector2( 0, 0 )
parameters/Cast/TimeScale/scale = 1.0
parameters/Idle/blend_position = Vector2( 0.0515151, 0.644828 )
parameters/Roll/blend_position = Vector2( -0.181818, 0.0344827 )
parameters/Run/blend_position = Vector2( 0.0212121, 0.413793 )

[node name="ViewLight" type="Light2D" parent="."]
position = Vector2( 0.143204, 0 )
texture = ExtResource( 2 )
color = Color( 0.952941, 0.752941, 0.517647, 1 )
shadow_filter = 1
shadow_filter_smooth = 6.0

[node name="ProjSpawnPivot" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -6 )

[node name="ProjSpawn" type="Position2D" parent="ProjSpawnPivot"]
position = Vector2( 8, 0 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
script = ExtResource( 6 )
max_hp = 100

[node name="HurtBox" parent="." instance=ExtResource( 8 )]
modulate = Color( 0.203922, 0.996078, 0.32549, 1 )
collision_layer = 1024

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -0.375, -5.75 )
shape = SubResource( 48 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )

[connection signal="no_hp" from="Stats" to="." method="_on_Stats_no_hp"]
[connection signal="take_hit" from="HurtBox" to="." method="_on_HurtBox_take_hit"]

[editable path="HurtBox"]
